xStream 3.5.13~nightly
- [hdfilme] fix hoster und Code cleanup

xStream 3.5.12
  03.01.2020
- [streamking] fix filthy site
- [kkiste.co] fix hoster supervideo
- [kinox] fix
- [movie4k] fix
- [movietown] add site
- [hdfilme] fix hoster
- [parser] py23 kompatibel
- add requestHandler2 beta for cloudflare
- [moviedream] fix nextpage
- [flimmerstube] fix search
- [filmpalast] fix nextpage
- [flimmerstube] youtube erkennung eingebaut und fix hoster youtube usw
- [kindertube] youtube erkennung eingebaut usw
- [iload] seite offline entfernt
- [freikino] alles offline entfernt
- [hdstreamfilme]  alles offline entfernt
- [s.to] fix filme
- [moviedream] fix genre
- [kkiste.co] fix hoster supervideo
- [movie4k] temporärer fix
- [hdfilme] fix hoster

xStream 3.5.11
  14.10.2019
- Update settings.xml und Language strings
- [filmpalast_to] add vivo support
- [streamking] wieder hinzugefügt
- [cinemaxx.cc] Blazingfast problem entfernt
- [foxx.to] offline
- [movietown.org] cloudflare problem entfernt
- [mykino.to] fast alle links offline
- [streamking.eu] offline
- [KKiste.co] Add supervideo support
- [topstreamfilm] add description and duration usw
- [KKiste.co] Add site
- [MovieStream] fix such filter
- [hdfilme] fix movie hoster and episodes tnx Ahnz
- [Kinoger] add hoster newcloud aka fsst.online

xStream 3.5.10
  09.09.2019
- [hd-streams.to] Fix
- [kinoger.com] fix hoster add description and duration
- [filmpalast] add partially year and duration
- [foxx] add duration
- [hd-streams.to] add site
- [hd-streams.org] fix suche usw.
- [foxx] fix suche
- [alleserien] fix suche
- [s.to] fix hoster Qualy
- [moviedream] fix hoster tnx kasimodo
- [alleserien] fix hoster
- [kinox] update domains
- [Foxx] Fix Regex
- [topstreamfilm] Fix Hoster
- [Update Manager] Resolver nightly Pfad erneuert

xStream 3.5.9
  21.07.2019
- [kinox] update domains
- [Foxx] Fix Regex
- [topstreamfilm] Fix Hoster
- [moviedream] fix nexpage problem
- [s.to] Fix Thumbnail
- [cinemaxx.cc] Fix Episodes